# transorthogonal-linguistics

./: .gitignore  AGENTS.md  README.md  demo.py  deploy_notes.md  pyproject.toml  requirements.txt  slerp_word_path.py  slurp_word_path.py  streamlit_app.py  word_path.py
docs/: DATA_CONTRACT.md  HARNESS_STRATEGY.md  PROJECT_CONTRACT.md  PYTHON3_MODERNIZATION_CONTRACT.md  README.md
flask/: Procfile  demo.py  deploy_notes.md  requirements.txt  word_path.py
flask/static/: viewer.css
flask/templates/: front.html
static/: messages.css  viewer.css
templates/: _formhelpers.html  d3viz.js  front.html
tests/: test_python3_modernization.py
transorthogonal_linguistics/: __init__.py  slerp_word_path.py  word_path.py
