[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transorthogonal-linguistics"
version = "0.1.0"
description = "Word-path experiments over word embeddings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.scripts]
transorthogonal-words = "transorthogonal_linguistics.word_path:main"
transorthogonal-slerp = "transorthogonal_linguistics.slerp_word_path:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["transorthogonal_linguistics"]

[tool.setuptools.package-data]
transorthogonal_linguistics = ["data/*.npy"]
